[metadata]
name = robotframework-pabot
author = Mikko Korpela
url = https://pabot.org
version = attr: pabot.VERSION
description = Parallel test runner for Robot Framework
long_description = file: README.md
keywords = one, two
license = Apache License, Version 2.0
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    License :: OSI Approved :: Apache Software License
    Development Status :: 5 - Production/Stable
    Framework :: Robot Framework

[options]
python_requires = >=3.6
package_dir =
    = src
packages=find:
include_package_data = True
install_requires =
    robotframework>=3.2
    robotframework-stacktrace>=0.4.1
    natsort>=8.2.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
     pabot = pabot.pabot:main