[metadata]
name = robotframework-pabot
author = Mikko Korpela
author_email = mikko.korpela@gmail.com
url = https://pabot.org
download_url = https://pypi.python.org/pypi/robotframework-pabot
project_urls =
    Source = https://github.com/mkorpela/pabot
version = attr: pabot.__version__
description = Parallel test runner for Robot Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
license_files =
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
    Development Status :: 5 - Production/Stable
    Framework :: Robot Framework

[options]
python_requires = >=3.6
package_dir =
    = src
packages=find:
include_package_data = True
install_requires =
    robotframework>=3.2
license_files =
    LICENSE

[options.extras_require]
stacktrace =
    robotframework-stacktrace>=0.4.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
     pabot = pabot.pabot:main